[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/FallingSpikes.gd" type="Script" id=1]
[ext_resource path="res://Art/01_Cave/Rocks_&_crystals/dripstones/dripstone_top/dripstone_top_06.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.9158, 11.6533 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.413, 15.0985 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 58.1663, 166.724 )

[sub_resource type="Animation" id=4]
resource_name = "Shaking"
length = 0.09
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 4, 0 ), Vector2( -4, 0 ), Vector2( 0, 0 ) ]
}

[node name="FallingSpikes" type="Node2D" groups=[
"FallingSpikes",
]]
position = Vector2( 1.49831, -0.187286 )
script = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
visible = false
position = Vector2( 19.7708, 15.0716 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( -0.264878, 1.05945 )
scale = Vector2( 1.2152, 1.17658 )
texture = ExtResource( 2 )
centered = false

[node name="Hitbox" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Hitbox"]
position = Vector2( 19.6646, 18.633 )
shape = SubResource( 2 )

[node name="DetectionBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionBox"]
position = Vector2( 18.6198, 168.698 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.7
anims/Shaking = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
[connection signal="body_entered" from="KinematicBody2D/Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="DetectionBox" to="." method="_on_DetectionBox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
